fixed profile image without distortion

--- a/client/stylesheets/components/business_card.import.less
+++ b/client/stylesheets/components/business_card.import.less
@@ -1,4 +1,14 @@
-.profile-image{
-  height: 200px;
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.profile-image-centered {
+  display: block;
   width: 200px;
+  height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
